# pyrope_artifacts

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: Usage.md
docs/grammar/: README  pyrope_ts.ebnf
docs/tutorial/: .gitignore  Makefile  README  TODO  bad_scope_idea.prp  package.json  presentation.md  pyrope.3
lgen/src/: hwclient.cpp  inotify.cpp
lsp/: README.md  language-configuration.json  package-lock.json  package.json
lsp/client/: package-lock.json  package.json
lsp/snippets/: pyrope.json
lsp/syntaxes/: Pyrope.tmLanguage.json
parser/: .gitignore  README.md  package.json
parser/cfg/: test_traversal.js
parser/cgen/: cgen_graph.js  tmp_var_generator.js
parser/data/: errorLog  prplearn.json
parser/docs/: Develop.md  README.old  Usage.md
parser/inputs/: bug11.prp  bug14.prp  bug16.prp  bug24.prp  bug29.prp  bug3.prp  bug38.prp  bug39.prp  bug45.prp  bug52.prp  bug7.prp  constantAndExpressionTest_toParse.prp  expr_precedence.prp  expressionTest.prp  expressionTest3.prp  feature1.prp  feature3.prp  foo_toParse.prp  metaprog1.prp  methods2.prp  methods4.prp  new_parser_input.prp  parent.prp  size_4x.prp  (+5 more)
pegjs-parser/: README.md  TODO
prplib/: README.md  lgmem.prp  lgmem2.prp
prsr/: package.json
psrc/: Context.hpp  OverflowPool.hpp  Type.cpp  Type.hpp
pyth/: setup.py
python/: README.md
simlib/: Connection.cpp  FluidPort.cpp  FluidPort.h  FluidRegister.cpp  FluidRegister.h  InternalRegister.h  Pipe.cpp  Pipe.h  Runtime.cpp  Runtime.h  SimplePort.cpp  SimplePort.h  Stage.cpp  Stage.h  pyrope_operations.cpp  pyrope_operations.h  pyrope_operations_16.h  pyrope_operations_32.h  pyrope_operations_64.h  pyrope_operations_8.h  pyrope_utils.cpp  pyrope_utils.h
source/: Context.cpp  Context.hpp  Overflow_Pool.hpp  Type.cpp  Type.hpp
test/: hash_tb.cpp  types.cpp
tree-sitter-pyrope/: README.md  bench.sh  binding.gyp  driver_test.cpp  grammar.js  index.js  package.json  test.sh
(+315 files in other folders)
